# Inter-Platform-Communication

lib/rpmsg_lite/: rpmsg_lite_zephyr.c
lib/rpmsg_lite/porting/environment/: rpmsg_env_zephyr.c
samples/linux/: Kconfig  Makefile
samples/linux/tests/: imx_rpmsg.c  imx_rpmsg_pingpong.c  imx_rpmsg_tty.c  qcom_glink_native.c  qcom_glink_native.h  qcom_glink_rpm.c  qcom_glink_smem.c  qcom_smd.c  rpmsg_char.c  rpmsg_core.c  rpmsg_internal.h  virtio_rpmsg_bus.c
samples/rtos/zephyr/: rpmsg-lite-rtos.mk
samples/rtos/zephyr/tests/rpmsg_lite_pingpong/: CMakeLists.txt  makefile  prj.conf  rpmsg_lite_pingpong.c
samples/rtos/zephyr/tests/rpmsg_lite_str_echo/: CMakeLists.txt  debug.conf  makefile  prj.conf  rpmsg_lite_str_echo.c
